# EstruturasDeDados

./: CMakeLists.txt  Main.c  Main.h  index.html
Arvores/: ArvoreBinaria.c  ArvoreBinaria.h
Exercicios/: Recursividade.c  Recursividade.h  aritmeticaPonteiros.c  aritmeticaPonteiros.h  aritmeticaPonteiros2.c  buscas.c  buscas.h  exercicio_4_4-1.c  exercicio_4_4-1.h  exercicio_4_4-4.c  exercicio_4_4-4.h  exercicio_5_4-2.c  exercicio_5_4-2.h  exercicio_5_4-3.c  exercicio_5_4-3.h  exercicio_5_4-4.c  exercicio_5_4-4.h  exercicio_5_4-5.c  exercicio_5_4-5.h  exercicio_8_3-1:2:3.c  exercicio_8_3-1:2:3.h  exerciciosPonteiros.c  stringsPonteiros.c  stringsPonteiros.h
Libs/: Arquivos.c  Arquivos.h  Matrizes.h
Listas/: ListaContiguaDinamica.c  ListaContiguaDinamica.h  ListaEncadeada.c  ListaEncadeada.h  ListaLIFOEncadeada.c  ListaLIFOEncadeada.h
docs/: doxygenConfig
docs/html/: Arquivos_8h_source.html  ArvoreBinaria_8h_source.html  ListaContiguaDinamica_8h_source.html  ListaEncadeada_8h.html  ListaEncadeada_8h__dep__incl.dot  ListaEncadeada_8h__incl.dot  ListaEncadeada_8h_source.html  ListaLIFOEncadeada_8h_source.html  Main_8h.html  Main_8h__dep__incl.dot  Main_8h__incl.dot  Main_8h_source.html  Matrizes_8h_source.html  Recursividade_8h_source.html  annotated.html  aritmeticaPonteiros_8h.html  aritmeticaPonteiros_8h__dep__incl.dot  aritmeticaPonteiros_8h__incl.dot  aritmeticaPonteiros_8h_source.html  arquivos_8h_source.html  buscas_8h.html  buscas_8h__incl.dot  buscas_8h_source.html  cabessalho_8h.html  cabessalho_8h__incl.dot  cabessalho_8h_source.html  classes.html  dir_6719ab1f1f7655efc2fa43f7eb574fd1.html  dir_6e6cb9563333489fde7459b1f95e59a5.html  dir_799449bf4be6a1bcafc4f1e39c15c234.html  dir_936c49d8836f19ed25e3147ebd4182c1.html  dir_95e29a8b8ee7c54052c171a88bb95675.html  dir_9ad2573a026a381174d2983aa02d7417.html  dir_c4cee24571eabd21860f3eded7f81ba6.html  dir_de1d559ee29b9529c3eb971659538ce1.html  dir_f3a2bd1690ced8c65cd21c0785adcdc0.html  dir_f89abcb304c928c7d889aa5625570de5.html  dir_fecfe773f908b91c373e1f72e381ab2e.html  exercicio__4__4-1_8h_source.html  exercicio__4__4-4_8h_source.html  (+28 more)
docs/latex/: ListaEncadeada_8h.tex  ListaEncadeada_8h.tex.tmp  ListaEncadeada_8h__dep__incl.dot  ListaEncadeada_8h__incl.dot  Main_8h.tex  Main_8h.tex.tmp  Main_8h__dep__incl.dot  Main_8h__incl.dot  annotated.tex  aritmeticaPonteiros_8h.tex  aritmeticaPonteiros_8h__dep__incl.dot  aritmeticaPonteiros_8h__incl.dot  buscas_8h.tex  buscas_8h__incl.dot  cabessalho_8h.tex  cabessalho_8h.tex.tmp  cabessalho_8h__incl.dot  files.tex  matrizes_8h.tex  matrizes_8h__dep__incl.dot  matrizes_8h__incl.dot  refman.tex  structElemento.tex  structFIFO.tex  structValor.tex  (+7 more)
html/: cabessalho_8h.html  cabessalho_8h__incl.dot  cabessalho_8h_source.html  files.html
latex/: cabessalho_8h.tex  cabessalho_8h.tex.tmp  cabessalho_8h__incl.dot  files.tex  refman.tex
libs/: Matrizes.c
resources/: matrizes.txt
(+36 files in other folders)
